--- a/src/app/partnership/partnership.component.html
+++ b/src/app/partnership/partnership.component.html
@@ -2,8 +2,8 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-offset-7 col-sm-5">
-        <h1><small style="color:#fff;font-size:32px">Become a</small> <br /> RFPGurus Partner</h1>
-        <p style="font-size:20px;margin:0 0 12px">Elevate your RFP Bidding experience to a whole new level</p>
+        <h1><small class="become-a">Become a</small> <br /> RFPGurus Partner</h1>
+        <p class="elevate">Elevate your RFP Bidding experience to a whole new level</p>
         <form [formGroup]="partnership" (ngSubmit)="onSubmit()">
           <div class="form-group">
             <label for="form_name">Your Name *</label>
