--- a/src/app/admin-penal/admin-penal.component.html
+++ b/src/app/admin-penal/admin-penal.component.html
@@ -6,10 +6,10 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="page-title">
-            <div class="col-sm-6" style="margin:10px 0px">
+            <div class="col-sm-6 m-10-0">
               <span>Admin Panel</span>
             </div>
-            <div class="col-sm-6" style="margin:10px 0px">
+            <div class="col-sm-6 m-10-0" >
               <span *ngIf="item">No of Letest RFPs: <b> {{item | number}}</b></span>
             </div>
           </div>
@@ -18,19 +18,19 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]">
+                    <a  [routerLink]="['/rfp/', rfp.seoTitleUrl]">
                       <h4 class="card-title">{{rfp.rfpkey}}</h4>
                     </a>
                   </div>
                 </div>
                 <button class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
-                ><span style="font-size: 18px;">
+                ><span >
                     Edit </span>
                 </button>
                 <div class="card-content">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                     <h3>
-                      <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]"> {{rfp.title}}</a>
+                      <a class="curser-pointer"  [routerLink]="['/rfp/', rfp.seoTitleUrl]"> {{rfp.title}}</a>
                     </h3>
                     <h5 *ngIf="rfp?.agency">
                       <i class="far fa-building"></i>Agency : <span>{{rfp?.agency}}</span></h5>
@@ -175,210 +175,3 @@
     </div>
   </div>
 </div>
-<!-- <div class="modal fade " id="myModal2" role="dialog">
-  <div class="modal-dialog admin-popup">
-    
-    <div class="modal-content popupmodel">
-      <div class="modal-body" >
-          <div class="popup-close-button" data-dismiss="modal">X</div>
-        <div class="row">
-          <div class="col-lg-9 col-md-9 col-sm-9 col-xs-9 " style="margin-bottom:10px;border-bottom: 1px #4f4f4f solid;">
-            <p class=" modal-v2__main-heading"> {{title}}</p>
-
-          </div>
-
-          <form class="sh-signup-form-fix">
-
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-                <mat-form-field>
-                  <input matInput placeholder="Title" name="title" value="{{title}}" required #updatedtitle />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group" >
-
-                <mat-form-field>
-                  <input matInput placeholder="RFP Number"  name="rfp_number" value="{{rfp_number}}"
-                    #updatedrfp_number />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="RFP Key" name="rfpkey" value="{{rfpkey}}" #uprfpkey />
-
-                </mat-form-field>
-              </div>
-            </div>
-            
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-                <mat-form-field>
-                
-                  <mat-select [(ngModel)]="states" name="states"  placeholder="Search By State" #updatedstates>
-                    <input class="inp" type="text" [(ngModel)]="statsearch" [ngModelOptions]="{standalone: true}"
-                        class="search-allstates" placeholder="Search By State" style="width: 100%; border-radius: 7px;">
-                    <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
-                    <mat-option value='all'>Select All</mat-option>
-                    <mat-option value='Federal'>Federal</mat-option>
-                    <mat-option *ngFor="let item of Statess | filter:statsearch" [value]="item.state">{{item.state}}</mat-option>
-                </mat-select>
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Agency" name="agency" value="{{agency}}" #updatedagency />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Category" name="category" value="{{category}}" #updatedcategory />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Sub Category" name="subcat" value="{{subcat}}" #updatedsubcat />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="seoTitleUrl" name="seoTitleUrl" value="{{seoTitleUrl}}" #updatedseoTitleUrl />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Bid Type" name="bid_type" value="{{bid_type}}" #updatedbid_type />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Agency Type" name="agency_type" value="{{agency_type}}" #updatedagency_type />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="City or County" name="city_or_county" value="{{city_or_county}}" #updatedcity_or_county />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="Open Rfp" name="open_rfp" value="{{open_rfp}}" #updatedopen_rfp />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group">
-
-                <mat-form-field>
-                  <input matInput placeholder="City" name="city" value="{{city}}" #updatedcity />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group margin-zero1">
-
-                <mat-form-field>
-                  <input matInput placeholder="Posted Date" name="date_entered" value="{{date_entered}}"
-                    #updateddate_entered />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group margin-zero1">
-
-                <mat-form-field>
-                  <input matInput placeholder="Submission Date" name="due_date" value="{{due_date}}" #updateddue_date />
-
-                </mat-form-field>
-              </div>
-            </div>
-
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group margin-zero1">
-                 
-                <mat-form-field >
-
-                  <input matInput placeholder="Web Information PDF" name="web_info" value="{{web_infoo}}" #updatedweb_info
-                   />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-6 col-sm-6">
-              <div class="input-group margin-zero1" >
-
-                <mat-form-field>
-                  <input matInput placeholder="Rfp Reference"  name="rfp_reference" value="{{rfp_reference}}"
-                    #updatedrfp_reference />
-
-                </mat-form-field>
-              </div>
-            </div>
-            <div class="col-md-12 col-sm-12">
-                <div class="input-group">
-                  <ckeditor [(ngModel)]="descriptionTag" name="descriptionTag"> {{descriptionTag}}
-                    <ckbutton [name]="'saveButton'" [command]="'saveCmd'"  [icon]="'save.png'"
-                      [label]="'Save Document'" [toolbar]="'clipboard,1'">
-                    </ckbutton></ckeditor>
-  
-                </div>
-              </div>
-            <div class="col-md-12 col-sm-12">
-
-              <div class=" text-center" style="margin-top: -21px;">
-                <button type="submit" class="btn btn-fill" (click)="editClick(updatedtitle.value,updatedrfp_number.value,uprfpkey.value,descriptionTag,updatedstates.value,updatedagency.value,updateddate_entered.value,updateddue_date.value,updatedrfp_reference.value,updatedcategory.value,updatedsubcat.value,updatedseoTitleUrl.value,updatedbid_type.value,updatedagency_type.value,updatedcity_or_county.value,updatedcity.value,updatedweb_info.value,updatedopen_rfp.value)"
-                  data-dismiss="modal">Update</button>
-
-                <button type="button" class="btn btn-fill" data-dismiss="modal">Cancel</button>
-
-              </div>
-            </div>
-
-
-          </form>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</div> -->
