--- a/src/app/admin/Preferences/profile.component.html
+++ b/src/app/admin/Preferences/profile.component.html
@@ -171,7 +171,7 @@
                 </div>
                 <div class="form-footer">
                     <div class="checkbox col-md-4 col-sm-6 margin-0">
-                        <label style="font-size: 18px">
+                        <label >
                             <input type="checkbox" [(ngModel)]="personal.newsletter" value="{{personal.newsletter}}"
                                 name="newsletter" formControlName="newsletter"> Subscribe to Newsletter
                         </label>
