--- a/src/app/advance-search/advance-search.component.html
+++ b/src/app/advance-search/advance-search.component.html
@@ -1,7 +1,7 @@
 <app-loader></app-loader>
 
-<div class="container sh-advnce-search" style="padding-top: 10px;">
-    <div class="card one" style="margin-bottom:0;">
+<div class="container sh-advnce-search pt-10px">
+    <div class="card one" >
         <div class="card-header" data-background-color="red">
             <h2>Advanced Search</h2>
         </div>
@@ -38,7 +38,7 @@
                         <mat-form-field>
                             <mat-select [(ngModel)]="states" name="states"  placeholder="Search By State" >
                                 <input class="inp" type="text" [(ngModel)]="statsearch" [ngModelOptions]="{standalone: true}"
-                                    class="search-allstates" placeholder="Search By State" style="width: 100%; border-radius: 7px;">
+                                    class="search-allstates" placeholder="Search By State" >
                                 <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
                                 <mat-option value='all'>Select All</mat-option>
                                 <mat-option value='Federal'>Federal</mat-option>
@@ -50,7 +50,7 @@
                         <mat-form-field>
                             <mat-select [(ngModel)]="agencies" name="agencies" placeholder="Search By Agency" >
                                 <input class="inp" type="text" [(ngModel)]="agensearch" [ngModelOptions]="{standalone: true}"
-                                    class="search-allstates" placeholder="Search By Agency" style="width: 100%; border-radius: 7px">
+                                    class="search-allstates" placeholder="Search By Agency" >
                                 <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
                                 <mat-option value='all'>Select All</mat-option>
                                 <mat-option *ngFor="let item of agency | filter:agensearch" [value]="item.agency">{{item.agency}}</mat-option>
@@ -61,7 +61,7 @@
                         <mat-form-field>
                             <mat-select [(ngModel)]=cates name="cates" placeholder="Search By Category" >
                                 <input class="inp" type="text" [(ngModel)]="catsearch" [ngModelOptions]="{standalone: true}"
-                                    placeholder="Search By Category" class="search-allstates" style="width: 100%; border-radius: 7px">
+                                    placeholder="Search By Category" class="search-allstates" >
                                 <i class="fa fa-search s-icon-all-states" area-hidden="true"></i>
                                 <mat-option value='all'>Select All</mat-option>
                                 <mat-option *ngFor="let catitem of cat | filter:catsearch" [value]="catitem.category">{{catitem.category}}</mat-option>
@@ -80,7 +80,7 @@
     <div class="card two" >
 
         <div class="col-sm-12 text-center" *ngIf="record.length == 0 && search ">
-            <i class="fa fa-exclamation-triangle" style="font-size:35px;padding:15px 0 0;"></i>
+            <i class="fa fa-exclamation-triangle"></i>
             <h3 class="text-center">No Record Found</h3>
         </div>
         <div *ngIf="record.length >= 1 " class="card-content">
@@ -88,7 +88,7 @@
                 <div class="col-md-12">
                     <h3 class="text-center srch-result">Search Results - {{length | number}} RFP Opportunities Found</h3>
                 </div>
-                <div class="col-md-6" style="padding: 0;">
+                <div class="col-md-6 padding-zero">
                 </div>
             </div>
             <div class="products-area sh-products-area">
@@ -157,20 +157,20 @@
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="card-header card-header-text" data-background-color="purple">
-                                <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                                <a class="curserr-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
                                     <h4 class="card-title">{{rfp.rfpkey}}</h4>
                                 </a>
                             </div>
                         </div>
                         <button *ngIf="adminlogin" class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
-                        ><span style="font-size: 18px;">
+                        ><span >
                             Edit </span>
                         </button>
                         <div class="card-content">
                             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail">
                                 <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                                     <h3>
-                                        <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                                        <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
                                             {{rfp.title}}</a>
                                     </h3>
                                     
@@ -262,10 +262,10 @@
                                     </div>
                                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail" *ngIf="!subscribe">
                                         <h5 ><i class="fas fa-info dscrption-icon"></i>Description:
-                                           <a style="cursor:pointer" (click)="memberonly()" class="memberOnly"><i class="fas fa-lock lock-icon"></i>Member Only</a>
+                                           <a  (click)="memberonly()" class="memberOnly curser-pointer"><i class="fas fa-lock lock-icon"></i>Member Only</a>
                                         </h5>
                                         <h5 ><i class="fas fa-file-alt"></i>Bid Documents:
-                                           <a style="cursor:pointer" (click)="memberonly()" class="memberOnly"><i class="fas fa-lock lock-icon"></i>Member Only</a>
+                                           <a (click)="memberonly()" class="memberOnly curser-pointer"><i class="fas fa-lock lock-icon"></i>Member Only</a>
                                         </h5>
                                       </div>
                                 </div>
