--- a/src/app/all/all-agencies/all-agencies.component.html
+++ b/src/app/all/all-agencies/all-agencies.component.html
@@ -19,7 +19,7 @@
           </li>
           <span *ngFor="let item of Rfp">
             <li *ngIf="item.agency != '' ">
-              <a style="cursor:pointer" [routerLink]="['/agency']" [queryParams]="{ agency: item.agency}"> <i class="material-icons">arrow_forward</i>
+              <a class="curser-pointer" [routerLink]="['/agency']" [queryParams]="{ agency: item.agency}"> <i class="material-icons">arrow_forward</i>
                 {{item.agency}} </a>
             </li>
           </span>
@@ -51,7 +51,7 @@
         </div>
         <div *ngFor="let rfpagency of agency | filter:agensearch" class="col-sm-4 col">
           <div class="col-sm-1 col-xs-1"><i class="fab fa-superpowers" aria-hidden="true"></i></div>
-          <div class="col-sm-11 col-xs-11"><a style="cursor:pointer" [routerLink]="['/agency']" [queryParams]="{ agency: rfpagency.agency}">
+          <div class="col-sm-11 col-xs-11"><a class="curser-pointer" [routerLink]="['/agency']" [queryParams]="{ agency: rfpagency.agency}">
               {{rfpagency.agency}}({{rfpagency.total}})
             </a></div>
         </div>
