--- a/src/app/all/all-rfps/all-rfps.component.html
+++ b/src/app/all/all-rfps/all-rfps.component.html
@@ -21,19 +21,19 @@
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                    <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
                       <h4 class="card-title">{{rfp.rfpkey}}</h4>
                     </a>
                   </div>
                 </div>
                 <button *ngIf="adminlogin" class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
-                ><span style="font-size: 18px;">
+                ><span >
                     Edit </span>
                 </button>
                 <div class="card-content">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                     <h3>
-                      <a style="cursor:pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
+                      <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]" (click)="move()">
                         {{rfp.title}}</a>
                     </h3>
                     <h5 *ngIf="rfp.agency"><i class="far fa-building"></i>Agency : <a [routerLink]="['/agency']"
