--- a/src/app/all/all-state/all-state.component.html
+++ b/src/app/all/all-state/all-state.component.html
@@ -16,7 +16,7 @@
           </li>
           <span *ngFor="let item of Rfp">
             <li *ngIf="item.state != '' ">
-              <a style="cursor:pointer" [routerLink]="['/state']" [queryParams]="{ state: item.state}"> <i class="material-icons">arrow_forward</i>
+              <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: item.state}"> <i class="material-icons">arrow_forward</i>
                 {{item.state}} </a>
             </li>
           </span>
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div *ngFor="let rfpstate of state | filter:statesearch" class="col-sm-4 col-lg-4 col-md-4 col-xs-12 col">
-          <a style="cursor:pointer" [routerLink]="['/state']" [queryParams]="{ state: rfpstate.state}">
+          <a class="curser-pointer" [routerLink]="['/state']" [queryParams]="{ state: rfpstate.state}">
             <img class="sh-state-img" src="https://storage.rfpgurus.com/bplrfpgurus/{{rfpstate.icon_image}}" alt="img">
             <p>{{rfpstate.state}}</p>
           </a>
