--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
             <p>No results found. Please use keywords.</p>
           </li>
           <li *ngFor="let item of Rfp">
-            <a style="cursor:pointer" (click)="singlerfp( item.seoTitleUrl)">
+            <a class="curser-pointer" (click)="singlerfp( item.seoTitleUrl)">
               <i class="material-icons">arrow_forward</i> {{item.title}} </a>
           </li>
         </ul>
@@ -63,7 +63,7 @@
               <!-- <img src="../../assets/img/caption.png" alt="img"> -->
               <h2 class="sh-map-desc">Click on any state in the nationwide map to view Latest RFPs</h2>
               <div class="svg_map">
-                <us-map style="cursor: pointer; " (onMapClick)="getState($event)" strokeColor="#00000" fillStateColor="#fff"
+                <us-map class="curser-pointer" (onMapClick)="getState($event)" strokeColor="#00000" fillStateColor="#fff"
                   fillColor="black"></us-map>
                   
               </div>
@@ -75,12 +75,12 @@
                   <div class="item CategorySliderTop" *ngFor="let ite of cat">
                     <div class="image">
                       <a [routerLink]="['/category']" [queryParams]="{ cat:ite.category}">
-                        <img title={{ite.category}} style="border: none;width: 100%; " class="img" src="https://storage.rfpgurus.com/bplrfpgurus/{{ite.icon_image}}">
+                        <img title={{ite.category}}  class="img cat-slide" src="https://storage.rfpgurus.com/bplrfpgurus/{{ite.icon_image}}">
                       </a>
                     </div>
                     <div class="slide-overlay">
                       <h4 class="card-title elipsis-cat-slider">
-                        <a  [routerLink]="['/category']" [queryParams]="{ cat: ite.category}" class=".pclass" title={{ite.category}} style="color: #ffffff !important;font-size: 14px;font-weight: bold;">{{
+                        <a  [routerLink]="['/category']" [queryParams]="{ cat: ite.category}" class=".pclass " title={{ite.category}} >{{
                           ite.category }}</a>
                       </h4>
                     </div>
@@ -372,23 +372,23 @@
         </div>
       </div>
     </section>
-    <section class="packages-holder" style="margin-top: -35px">
+    <section class="packages-holder m-top-minus-35px">
       <div class="container-fluid sh-pd-0-70 sh-pkg-holder">
-        <h3 class="heading" style="text-align: center">Latest RFPs</h3>
+        <h3 class="heading text-center">Latest RFPs</h3>
         <ngx-carousel [inputs]="carouselTwo" class="carouselTwo sh-carousel-fix" data-interval="true">
           <ngx-item NgxCarouselItem *ngFor="let rfp of record">
             <div class="card">
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a style="cursor:pointer" (click)="single( rfp.seoTitleUrl)">
+                    <a class="curser-pointer" (click)="single( rfp.seoTitleUrl)">
                       <h4 class="card-title">{{rfp.rfp_number}}</h4>
                     </a>
                   </div>
                   <div class="card-content">
                     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 plan-detail">
                       <h3>
-                        <a style="cursor:pointer" (click)="single( rfp.seoTitleUrl)"> {{rfp.title}}</a>
+                        <a class="curser-pointer" (click)="single( rfp.seoTitleUrl)"> {{rfp.title}}</a>
                       </h3>
                       <h5 *ngIf="rfp?.agency">
                        <i class="fa fa-building-o"></i>Agency : <span>{{rfp?.agency}}</span></h5>
@@ -419,7 +419,7 @@
         <div class="row">
         <div class="col-md-5 col-sm-7 padding-0 col-md-offset-2 ">
           <div class="map-mid ">
-          <us-map style="cursor: pointer; " (onMapClick)="getState($event)" strokeColor="#00000" fillStateColor="#fff"
+          <us-map class="curser-pointer" (onMapClick)="getState($event)" strokeColor="#00000" fillStateColor="#fff"
             fillColor="black">
           </us-map> 
         </div>
@@ -430,17 +430,17 @@
       </div>
       <div class="text-center col-md-12">
         <a routerLink="/latest-rfp ">
-          <button  type="button" class="btn btn-lg btn-rose" title="VIEW All LATEST RFPs" style="background-color: black;border-radius: 30px">View All Latest RFPs
+          <button  type="button" class="btn btn-lg btn-rose" title="VIEW All LATEST RFPs" >View All Latest RFPs
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
           </button>
         </a> 
       </div>
       </div>
     </section>
-    <section class="interest-area sh" style="margin-top: -10px">
+    <section class="interest-area sh m-top-minus-10">
       <div class="container">
         <h3 class="text-center">Search By Area</h3>
-        <ngx-carousel [inputs]="carouselThree" class="s-areaCarousel" style="margin-top: 25px">
+        <ngx-carousel [inputs]="carouselThree" class="s-areaCarousel">
           <ngx-item NgxCarouselItem>
             <button (click)="stateInfo('California')" type="button" class="btn-primary">
               <img src="https://storage.rfpgurus.com/bplrfpgurus/California@30px.png" alt="img">
@@ -486,8 +486,8 @@
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
           </button>
         </ngx-carousel>
-        <div class="btn-holder text-center" style="margin-top:18px">
-        <a routerLink="/all-state">  <button  type="button" class="btn btn-lg btn-rose" title="View All States" style="background-color: black;border-radius: 30px">View
+        <div class="btn-holder text-center m-top-18px">
+        <a routerLink="/all-state">  <button  type="button" class="btn btn-lg btn-rose" title="View All States" >View
             All States
             <i class="fa fa-arrow-right" aria-hidden="true"></i>
           </button></a>
@@ -496,10 +496,10 @@
     </section>
     <section class="how-rfp-help">
       <div class="container">
-        <div class="row" style="margin-top: -25px">
+        <div class="row m-top-minus-35px" >
           <h3 class="text-center">How RFPGurus helps your organization in bidding on Nationwide Government Contracts
             the Smart Way? </h3>
-          <p style="margin-top: -25px;">Hundreds of Thousands RFPs. RFPGurus is the most comprehensive source of RFPs,
+          <p class="m-top-18px">Hundreds of Thousands RFPs. RFPGurus is the most comprehensive source of RFPs,
             RFI, RFQs, RFTs & RFBs with next generation Web
             & Platform Apps. We are RFP aggregator and provide RFP Data to vendors and businesses at the Federal, State, County,
             City
@@ -510,7 +510,7 @@
             <br>
             <span> Here is a brief glimpse into some of our Features and Services.</span>
           </p>
-          <div style="margin-top: -15px" class="col-lg-6 col-md-6 col-sm-6 col-xs-12 top-lists">
+          <div  class="col-lg-6 col-md-6 col-sm-6 col-xs-12 top-lists m-top-minus-15">
             <ul>
               <li>Instant Web and Mobile Access to all Government RFPs, RFIs, RFQs, RFTs and RFBs</li>
               <li>Hundreds & Thousands RFPs. Nationwide Coverage. The most comprehensive source of Nationwide RFPs,
@@ -524,7 +524,7 @@
               <li>RFPGurus Blog</li>
             </ul>
           </div>
-          <div style="margin-top: -15px" class="col-lg-6 col-md-6 col-sm-6 col-xs-12 top-lists">
+          <div  class="col-lg-6 col-md-6 col-sm-6 col-xs-12 top-lists m-top-minus-15">
             <ul>
               <li>A passion for excellence in customer service</li>
               <li>Daily Notifications sent on Web and Mobile</li>
@@ -537,7 +537,7 @@
               <li>RFP as a Service: Contact Lists & Custom Proposal Writing Services</li>
             </ul>
           </div>
-          <div style="margin-top: -15px;" class="col-lg-12 col-md-12 col-sm-12 col-xs-12  padding-zero">
+          <div  class="col-lg-12 col-md-12 col-sm-12 col-xs-12 m-top-minus-15 padding-zero">
             <p>RFPGurus provides data services to all vendors, organizations, and businesses: From startups to large
               mega-corporations.
               Our success is brought about by our continuous hard work in customizing our customer’s RFP Proposals to
@@ -548,12 +548,12 @@
               <span>Here are some of the industry verticals that we serve and aggregate data from.</span>
             </p>
           </div>
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="background-color:#f8f8f8; padding: 20px">
+          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 s_i_list">
             <div class="col-lg-3 col-md-3 col-sm-6 col-xs-12 bottom-lists sh">
               <ul class="list5">
                 <li>
                   <img src="https://storage.rfpgurus.com/bplrfpgurus/Agriculture.png" alt="RFPGurus" />
-                  <a [routerLink]="['/category']" [queryParams]="{ cat:'Agriculture'}" style="cursor:pointer">Agriculture</a>
+                  <a class="curser-pointer" [routerLink]="['/category']" [queryParams]="{ cat:'Agriculture'}" >Agriculture</a>
                 </li>
                 <li>
                   <img src="https://storage.rfpgurus.com/bplrfpgurus/Banking%20and%20Accounting.png" alt="RFPGurus" />
@@ -1203,11 +1203,11 @@
       </div>
       <div class="modal-footer">
         <a routerLink="/login">
-          <button title="Member Login" type="button" style="border-radius: 30px" class="btn btn-primary btn-must-login"
+          <button title="Member Login" type="button"  class="btn btn-primary btn-must-login"
             data-dismiss="modal">Member Login</button>
         </a>
         <a routerLink="/sign-up">
-          <button title="Subscribe Now" type="button" style="border-radius: 30px" class="btn btn-primary btn-must-signup"
+          <button title="Subscribe Now" type="button" class="btn btn-primary btn-must-signup"
             data-dismiss="modal">Subscribe Now</button>
         </a>
       </div>
