--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- <app-header></app-header> -->
 <app-loader></app-loader>
-<div class="login-form-1-img" style="margin-top: -15px">
+<div class="login-form-1-img m-top-minus-15" >
     <div class="container">
         <div class="login-form-1-center">
             <form [formGroup]="login" class="login-form-1 sh-signup-form-fix sh">
@@ -17,7 +17,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div class="form-group label-floating" [ngClass]="displayFieldCss(login, 'password')" style="margin-top: -17px">
+                    <div class="form-group label-floating" [ngClass]="displayFieldCss(login, 'password')" >
                         <mat-form-field>
                             <input matInput type="password" id="password" [type]="hide ? 'password' : 'text'"
                                 formControlName="password" placeholder="Password" required />
@@ -54,7 +54,7 @@
                             </div>
                             <div class="forgot_pas col-sm-6 padding-0">
                                 <label>
-                                    <a style="cursor:pointer;text-decoration:underline" (click)="foremail()">Forgot
+                                    <a  (click)="foremail()">Forgot
                                         your password?</a>
                                 </label>
                             </div>
