--- a/src/app/our-team/our-team.component.html
+++ b/src/app/our-team/our-team.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="container">
     <h3>RFPGurus is your essential WINNING Partner in Government RFP Bidding</h3>
-    <p><a routerlink="/contact-us" href="/contact-us" style="color: #cc0000 "><strong>ESTABLISH CONTACT</strong></a>
+    <p><a routerlink="/contact-us" href="/contact-us" class="clr_red"><strong>ESTABLISH CONTACT</strong></a>
       with us today. Let us know which RFP you would like us to work on your behalf? We&nbsp;will assign a team of
       specialists who work FOR YOU in readying a perfectly crafted RFP proposal for your next Government Contract.</p>
     <h3>Making your business successful in acquiring new Government RFP Contracts</h3>
@@ -32,40 +32,40 @@
       in the Public Sector.</p>
     <div class="row text-center our-team-l-4-d">
       <div class="col-md-3 col-sm-6">
-        <h4 style="font-weight:700">One-Package-Includes-All <br>=<br> Unbeatable Pricing</h4>
+        <h4 ><b>One-Package-Includes-All <br>=<br> Unbeatable Pricing</b></h4>
         <div class="img-holder">
           <img alt="Smarter e-Learning" src="../../assets/img/Smarter-E-Learning.png">
         </div>
         <p class="text-left">Unbeatable Pricing. Only One Package. All the Features Included Nationwide. No Gimmicks.
           No Hidden Fees. RFPGurus is your essential WINNING Partner in Government RFP Bidding.<a routerlink="/" href="/"><strong
-              style="font-weight:700"> Learn More.</strong></a></p>
+             > Learn More.</strong></a></p>
       </div>
       <div class="col-md-3 col-sm-6">
-        <h4 style="font-weight:700">Next Generation Platform <br>=<br> Smarter Bidding</h4>
+        <h4 ><strong>Next Generation Platform <br>=<br> Smarter Bidding</strong></h4>
         <div class="img-holder">
           <img alt="Interactive Simulations" src="../../assets/img/Accelerated-Learning.png">
         </div>
         <p class="text-left">RFPGurus is a next generation Artificially Intelligent Web and Mobile Platform for
           Nationwide Government Bidding: Full-Spectrum 360-Degree Coverage for Federal, State, County &amp; Local RFPs.
-          <a routerlink="/" href="/"><strong style="font-weight:700"> Learn More.</strong></a></p>
+          <a routerlink="/" href="/"><strong > Learn More.</strong></a></p>
       </div>
       <div class="col-md-3 col-sm-6">
-        <h4 style="font-weight:700">Web &amp; Mobile Apps <br>=<br> Easy &amp; Intuitive Access</h4>
+        <h4 >Web &amp; Mobile Apps <br>=<br> Easy &amp; Intuitive Access</h4>
         <div class="img-holder">
           <img alt="Intuitive Training" src="../../assets/img/Smarter-Knowledge-Transfer.png">
         </div>
         <p class="text-left">RFPGurus is easily accessible on Web, iOS &amp; Android platforms. Download our next
-          generation Apps on the platform of your choice to experience RFP Searching and Bidding like <strong style="font-weight:700">
-            NEVER BEFORE</strong>. <a routerlink="/" href="/"><strong style="font-weight:700"> Learn More.</strong></a></p>
+          generation Apps on the platform of your choice to experience RFP Searching and Bidding like <strong>
+            NEVER BEFORE</strong>. <a routerlink="/" href="/"><strong > Learn More.</strong></a></p>
       </div>
       <div class="col-md-3 col-sm-6">
-        <h4 style="font-weight:700">RFP as a Service <br>=<br> Custom Services</h4>
+        <h4 >RFP as a Service <br>=<br> Custom Services</h4>
         <div class="img-holder">
           <img alt="Democratized Pricing" src="../../assets/img/Democratized-Pricing.png">
         </div>
         <p class="text-left">RFPGurus provides customized end-to-end services for creating perfectly crafted Government
           RFP Proposals for your business for Federal, State, County, City &amp; Local RFPs. <a routerlink="/" href="/"><strong
-              style="font-weight:700"> Learn More.</strong></a></p>
+              > Learn More.</strong></a></p>
       </div>
     </div>
   </div>
