--- a/src/assets/css/demo.css
+++ b/src/assets/css/demo.css
@@ -1718,3 +1718,98 @@ margin: 0;
 .edit-rfp-form .mat-select-panel .mat-option{
     font-size: 16px !important;
 }
+.update-30{
+    width: 30% !important;
+}
+.m-10-0{
+    margin:10px 0px !important;
+}
+.card-header-text a{
+    cursor: pointer;
+}
+.edit-del-btn span{
+    font-size: 18px !important;
+}
+.curser-pointer{
+    cursor: pointer !important;
+}
+.pt-10px{
+    padding-top: 10px !important;
+}
+.card.one{
+    margin-bottom: 0 !important;
+}
+.search-allstates{
+    width: 100%; border-radius: 7px;
+}
+.fa-exclamation-triangle{
+    font-size:35px;
+    padding:15px 0 0;
+}
+.display_advance >div{
+    margin: 10px auto;
+    float: none;
+}
+.mt-10px{
+    margin-top: 10px;
+}
+.mb-0{
+    margin-bottom: 0 !important;
+}
+.vertical-align-middle{
+    vertical-align:middle !important;
+}
+.record-desc{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+}
+.mb-60px{
+    margin-bottom:60px;
+}
+.popupmodel .border{
+    margin-bottom:10px;
+    border-bottom: 1px #4f4f4f solid;
+}
+.profile-name{
+    right: 163%;
+}
+.img.cat-slide{
+    border: none;
+    width: 100%; 
+}
+.elipsis-cat-slider a{
+    color: #ffffff !important;
+    font-size: 14px;
+    font-weight: bold;
+}
+.m-top-minus-35px{
+    margin-top: -35px
+}
+.m-top-minus-10{
+    margin-top: -10px;
+}
+.m-top-minus-15{
+    margin-top: -15px;
+}
+.m-top-18px{
+    margin-top: 18px;
+}
+.s_i_list{
+    background-color:#f8f8f8; 
+    padding: 20px
+}
+.forgot_pas a{
+    cursor:pointer;
+    text-decoration:underline;
+}
+.become-a{
+    color:#fff;
+    font-size:32px
+}
+.elevate{
+    font-size:20px;
+    margin:0 0 12px
+}
