--- a/src/app/registered/registered.component.html
+++ b/src/app/registered/registered.component.html
@@ -201,7 +201,7 @@
                       <app-recapcha class="recaptcha-style"></app-recapcha>
                   </div>
                   <div class="form-group text-left col-sm-8 col-md-8 col-xs-12">
-                    <button title="Register" type="submit" style="width:35%;font-size:24px !important;" class="btn btn-lrg btn-rose btn-fill btn-wd" [disabled]="!register.valid || emailexist || usernameexist">Signup</button>
+                    <button title="Register" type="submit" class="btn btn-lrg btn-rose btn-fill btn-wd regester-btn" [disabled]="!register.valid || emailexist || usernameexist">Signup</button>
                     <br>
                   </div>
                 
