--- a/src/app/user-sidebar/user-sidebar.component.html
+++ b/src/app/user-sidebar/user-sidebar.component.html
@@ -143,9 +143,17 @@
                 </h5>
             </li>
             <li>
-                <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Global , Software, System and Application'}" class="view-more collapsed" data-toggle="collapse" data-target="#sh-state"  (click)="subcategory('Global , Software, System and Application')"> Global , Software, System and Application <i class="material-icons pull-right" >arrow_drop_down</i> </a><div *ngIf="sub_categories"><div id="sh-state" class="panel-details collapse" *ngFor="let catitem of sub_categories">
-                    {{catitem.subcategory_name}}
-                </div></div>
+<a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Global , Software, System and Application'}"
+   (click)="subcategory('Global , Software, System and Application')">
+    Global , Software, System and Application 
+     </a>
+     <i class="fa fa-plus pull-right view-more state collapsed"    data-toggle="collapse" data-target="#sh-state"></i>
+<div >
+    <div id="sh-state" class="panel-details collapse" >
+       alksdfalks j<br>
+       balskdfalskdf<br>
+    </div>
+</div>
             </li>
             <li>
                 <a class="abc" (click)=" formclear()" [routerLink]="['/category']" [queryParams]="{ cat: 'Engine Accessories'}"> Engine Accessories </a>
