--- a/src/app/layouts/admin/superadmin.component.html
+++ b/src/app/layouts/admin/superadmin.component.html
@@ -23,9 +23,11 @@
                     </div>
               </div>
               <ul class="col-sm-12">
-                <li><a routerLink="/admin-panel" routerLinkActive="active-route">
+                <li><a routerLink="/admin-panel" >
                     <i class="fa fa-dashboard"></i>Dashboard</a>
-                </li>
+                </li> <li><a routerLink="/add-rfp" >
+                  <i class="fa fa-dashboard"></i>Add New RFP</a>
+              </li>
                 <li><a routerLink="/">
                     <i class="fa fa-home"></i>Home</a>
                 </li>
