--- a/src/app/admin/Preferences/profile.component.html
+++ b/src/app/admin/Preferences/profile.component.html
@@ -24,7 +24,7 @@
                                                 <mat-form-field>
                                                     <mat-select placeholder="Categories" [formControl]="catess"
                                                         [(ngModel)]="tempUserPreference" multiple (change)="valueSelected(catess.value, $event)">
-                                                        <mat-option class="font-18px" *ngFor="let food of cat" [value]="food.category">{{food.category}}</mat-option>
+                                                        <mat-option class="font-18px" *ngFor="let food of cat" [value]="food.category_name">{{food.category_name}}</mat-option>
                                                     </mat-select>
                                                 </mat-form-field>
                                             </div>
