--- a/src/app/add-rfp/add-rfp.component.html
+++ b/src/app/add-rfp/add-rfp.component.html
@@ -241,7 +241,7 @@
 
             <div class=" text-center">
               <button type="submit" class="btn btn-fill" (click)="editClick(updatedtitle.value,updatedrfp_number.value,uprfpkey.value,data.descriptionTag,updatedstates.value,updatedagency.value,updateddate_entered.value,updateddue_date.value,updatedrfp_reference.value,updatedcategory.value,updatedsubcat.value,updatedseoTitleUrl.value,updatedbid_type.value,updatedagency_type.value,updatedcity_or_county.value,updatedcity.value,updatedweb_info.value,updatedopen_rfp.value)"
-                data-dismiss="modal">Update</button>
+                data-dismiss="modal">Submit</button>
 
               <button type="button" class="btn btn-fill" data-dismiss="modal">Cancel</button>
 
