--- a/src/app/admin-penal/admin-penal.component.html
+++ b/src/app/admin-penal/admin-penal.component.html
@@ -6,35 +6,37 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="page-title">
-            
+
             <div class="col-sm-6 m-10-0">
               <span>Admin Panel</span>
             </div>
-            <div class="col-sm-6 m-10-0" >
+            <div class="col-sm-6 m-10-0">
               <span *ngIf="item">Total No RFPs: <b> {{item | number}}</b></span>
             </div>
-            <div class="col-sm-6 m-10-0" >
-            <mat-slide-toggle name="select_model" [(ngModel)]="select_model" (click)="setmodel()"
-            class="py-toggle"></mat-slide-toggle></div>
+
+          </div>
+          <div class="col-sm-12 m-10-0 text-right cl-old-tgl">
+            <p>Cleaning Model</p>
+            <mat-slide-toggle name="select_model" [(ngModel)]="select_model" (click)="setmodel()" class="py-toggle"></mat-slide-toggle>
+            <p>Old Model</p>
           </div>
           <div class="products-area sh-products-area">
             <div *ngFor="let rfp of record;let i=index" class="card pos-rel">
               <div class="row">
                 <div class="col-sm-12">
                   <div class="card-header card-header-text" data-background-color="purple">
-                    <a  [routerLink]="['/rfp/', rfp.seoTitleUrl]">
+                    <a [routerLink]="['/rfp/', rfp.seoTitleUrl]">
                       <h4 class="card-title">{{rfp.rfpkey}}</h4>
                     </a>
                   </div>
                 </div>
-                <button class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.new_category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"
-                ><span >
+                <button class="fa btn sh fa-edit edit-del-btn" type="submit" value="Edit" type="submit" (click)="btnEditClick(rfp.id,rfp.rfpkey,rfp.rfp_number,rfp.title,rfp.descriptionTag,rfp.state,rfp.agency,rfp.date_entered,rfp.due_date,rfp.web_info,rfp.rfp_reference,rfp.new_category,rfp.sub_category,rfp.seoTitleUrl,rfp.bid_type,rfp.agency_type,rfp.city_or_county,rfp.city,rfp.open_rfp)"><span>
                     Edit </span>
                 </button>
                 <div class="card-content">
                   <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 plan-detail">
                     <h3>
-                      <a class="curser-pointer"  [routerLink]="['/rfp/', rfp.seoTitleUrl]"> {{rfp.title}}</a>
+                      <a class="curser-pointer" [routerLink]="['/rfp/', rfp.seoTitleUrl]"> {{rfp.title}}</a>
                     </h3>
                     <h5 *ngIf="rfp?.agency">
                       <i class="far fa-building"></i>Agency : <span>{{rfp?.agency}}</span></h5>
@@ -120,11 +122,11 @@
 
         <div class="col-lg-9 col-md-9 col-sm-6 col-xs-12 text-right">
           <ul class="pagination" *ngIf="pager.pages && pager.pages.length">
-              <li [ngClass]="{hide:pager.currentPage === 1}">
-                  <a (click)="onSubmit(1)" class="view-1s" class="btn btn-fill">
-                      <i class="fa fa-angle-double-left"></i>
-                  </a>
-              </li>
+            <li [ngClass]="{hide:pager.currentPage === 1}">
+              <a (click)="onSubmit(1)" class="view-1s" class="btn btn-fill">
+                <i class="fa fa-angle-double-left"></i>
+              </a>
+            </li>
             <li [ngClass]="{hide:pager.currentPage === 1}">
               <a (click)="setPage(pager.currentPage - 1)" class="view-1s" class="btn btn-fill">
                 <i class="fas fa-angle-left"></i>
@@ -155,10 +157,9 @@
               </a>
             </li>
             <li [ngClass]="{hide:pager.currentPage === pager.totalPages}">
-                <a (click)="setPage(pager.totalPages)" class="view-plan-details" class="btn bd-color"
-                    type="Next">
-                    <i class="fa fa-angle-double-right"></i>
-                </a>
+              <a (click)="setPage(pager.totalPages)" class="view-plan-details" class="btn bd-color" type="Next">
+                <i class="fa fa-angle-double-right"></i>
+              </a>
             </li>
           </ul>
         </div>
@@ -176,7 +177,7 @@
           </mat-form-field>
         </div>
       </div>
-      
+
     </div>
   </div>
 </div>
